fix scroll bar overflow

--- a/components/Dashboard/Overview/Reflection/Reflection.module.css
+++ b/components/Dashboard/Overview/Reflection/Reflection.module.css
@@ -8,7 +8,7 @@
   /* max-width: 40rem; */
 }
 .memo {
-  height: 12rem;
+  height: 100%;
   overflow-y: scroll;
   margin: 0.5rem;
 }
